--- a/obs/forms/obs.qrc
+++ b/obs/forms/obs.qrc
@@ -14,6 +14,7 @@
     <file>images/up.ico</file>
   </qresource>
   <qresource prefix="settings">
+    <file>images/settings/network.png</file>
     <file>images/settings/video-display-3.png</file>
     <file>images/settings/decibel_audio_player.png</file>
     <file>images/settings/applications-system-2.png</file>
